--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="server_error">An error happened. Please try again later.</string>
     <string name="unknown_error">Oops, an unknown error happened.</string>
     <string name="record_audio">Record audio</string>
+    <string name="error_speech_recognition_unavailable">Speech recognition is not available</string>
+    <string name="stop_recording">Stop recording</string>
+    <string name="apply">Apply</string>
+    <string name="record_again">Record again</string>
+    <string name="listening">Listening...</string>
+    <string name="start_talking">Click record and start talking</string>
 </resources>
